# graph-neural-networks

./: .gitignore  pyproject.toml
gnn/common/: const.py  util.py
gnn/kipf2017_gcn/: model.py  train.py  util.py
tests/: test_gnn.py
