[tool.poetry]
name = "gnn"
version = "0.1.0"
description = ""
authors = ["iTakeshi <itakeshi.net@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.3"
chainer = "^6.0"
cupy-cuda101 = "^6.0"
networkx = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
